# voxy

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/modules/: Findassimp.cmake
doc/: outline.txt
include/: sub_voxel.hpp  voxel.hpp
src/: CMakeLists.txt
src/voxy/: CMakeLists.txt
src/voxy/include/: config.hpp  importer.hpp  palette.hpp  scene.hpp  voxel.hpp  voxelizer.hpp
src/voxy/src/: importer.cpp  voxel.cpp
src/voxy/test/: testvoxy.cpp
